Fixed flickering effect on iPad retina when loading/switching tabs
The flickering effect occurred because the toolbar gets rendered more
than once for some reason. In the end, the solution was to force the
rendering of the toolbar through the GPU.

I took the opportunity of the change to simplify the rendering of the
toolbar a bit as it was using a combinaison of floats and absolute
positioning that was not really necessary.

The utils.less now features a ".accelerate" shortcut. Note that
setting "backface-visibility" to "hidden" is not enough anymore
to force an element through the GPU on iPad retina devices. The
shortcut gets replaced by a combinaison of "backface-visibility",
"perspective" and "translateZ". They should not all be needed but
that should not have any drawback in practice.

--- a/app/less/desktop.less
+++ b/app/less/desktop.less
@@ -47,14 +47,16 @@ header {
   z-index: 2;
   pointer-events: none;
 
+  // Forces the header through the GPU to avoid flickering effect
+  // on iPad Retina devices
+  .accelerate;
+
   .container {
     .vertical-gradient(desaturate(lighten(@background-color, 5%), 5%), desaturate(darken(@background-color, 10%), 5%));
     background-color: @background-color;
-    position: absolute;
-    z-index: 30;
-    left: 0;
-    top: 0;
+
     width: 100%;
+    height: 2.9em;
 
     // Adds a slight spotlight effect to the header bar
     > span {
@@ -78,12 +80,10 @@ header {
     text-transform: uppercase;
     line-height: 1em;
     padding: .5em 0;
-    float: left;
 
     span {
       display: block;
       position: relative;
-      z-index: 50;
       text-shadow: 0 0 2px rgba(0,0,0,.4);
     }
   }
